--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.5",
     "express-session": "^1.17.3",
+    "inquirer": "^8.0.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3"
   },
